--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-mocha-reporter": "^2.2.5",
     "typescript": "~5.4.5"
   }
 }
